profilelist1exp/unpackaged/objects/Campaign_Member_Field_History__c.object
<CustomObject>
    <description>US161224 Object to track CM field history</description>
    <fields>
        <fullName>Action__c</fullName>
        <formula>IF( ISBLANK(Old_Value__c) &amp;&amp; NOT(ISBLANK(New_Value__c)) , 
&apos;Changed &apos; + Field_Name__c + &apos; to &apos; + New_Value__c, 
IF( NOT(ISBLANK(Old_Value__c)) &amp;&amp; ISBLANK(New_Value__c),
&apos;Deleted &apos; + Old_Value__c + &apos; in &apos; + Field_Name__c,
IF( ISBLANK(Old_Value__c) &amp;&amp; ISBLANK(New_Value__c),
&apos;Created&apos;,
&apos;Changed &apos; + Field_Name__c + &apos; from &apos; + Old_Value__c + &apos; to &apos; + New_Value__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Field History</relationshipLabel>
        <relationshipName>Campaign_Member_Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Name_API__c</fullName>
        <label>Field Name API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Id__c</fullName>
        <label>Parent Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Campaign Member Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Member_Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Member Field History</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>CM History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>